@@ -20,6 +20,7 @@ Version 1.0.8.8
      * MagikSF (Sjoerd van Leent)
      * Oz (Wolfgang Meyer)
      * q/kdb+ (Ian Roddis)
+     * RPM Specification Files (Paul Grinberg)
      * Unicon (Matt Oates)
      * XBasic (José Gabriel Moya Yangüela)
   -  Improvements to language files (BenBE)
